# smolgrad

./: .gitignore  CMakeLists.txt  README.md
include/: NN.h
media/: autodiff.excalidraw
src/: NN.h  main.c
tests/: main_test.c  test.c  unit_test.c
